# openstack-ansible-os_tacker

./: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
examples/: playbook.yml
extras/: haproxy_tacker.yml  inventory_group_vars_utility_all.yml  os-tacker-install.yml  repo_tacker.yml  user_secrets.yml
extras/conf.d/: tacker.yml.example
extras/env.d/: tacker.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  tacker_db_setup.yml  tacker_db_sync.yml  tacker_horizon.yml  tacker_init.yml  tacker_init_common.yml  tacker_init_systemd.yml  tacker_init_upstart.yml  tacker_install.yml  tacker_install_apt.yml  tacker_messaging_setup.yml  tacker_post_install.yml  tacker_pre_install.yml  tacker_service_setup.yml
templates/: tacker-systemd-init.j2  tacker-upstart-init.j2  tacker.conf.j2  tacker_horizon_dashboard_extension.py
templates/etc/tacker/: tacker.conf.devstack_master  tacker.conf.j2  tacker.conf.j2.liberty  tacker.conf.sample
tests/: ansible-role-requirements.yml  inventory  os_tacker-overrides.yml  test-install-tacker.yml  test-tacker-functional.yml  test.yml
tests/host_vars/: tacker1.yml
vars/: main.yml  redhat-7.yml  suse.yml  ubuntu-14.04.yml
zuul.d/: jobs.yaml  project.yaml
